{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 85,
  "lineage": "bf03676d-d68f-5735-1425-b68d40fd9e0d",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "db001282_z1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/networkInterfaces/db001282_z1",
            "internal_domain_name_suffix": "knjesjxv3t5urnpzv4kg145nxf.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.6.0.12",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/virtualNetworks/DC001-vnet/subnets/default"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus2",
            "name": "db001282_z1",
            "private_ip_address": "10.6.0.12",
            "private_ip_addresses": [
              "10.6.0.12"
            ],
            "resource_group_name": "simuland-rg"
          },
          "dependencies": [
            "azurerm_subnet.DC001_vnet_default",
            "azurerm_virtual_network.DC001_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "db001939_z1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/networkInterfaces/db001939_z1",
            "internal_domain_name_suffix": "knjesjxv3t5urnpzv4kg145nxf.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.6.0.8",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/virtualNetworks/DC001-vnet/subnets/default"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus2",
            "name": "db001939_z1",
            "private_ip_address": "10.6.0.8",
            "private_ip_addresses": [
              "10.6.0.8"
            ],
            "resource_group_name": "simuland-rg"
          },
          "dependencies": [
            "azurerm_subnet.DC001_vnet_default",
            "azurerm_virtual_network.DC001_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "dc001104_z1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/networkInterfaces/dc001104_z1",
            "internal_domain_name_suffix": "knjesjxv3t5urnpzv4kg145nxf.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.6.0.10",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/virtualNetworks/DC001-vnet/subnets/default"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus2",
            "name": "dc001104_z1",
            "private_ip_address": "10.6.0.10",
            "private_ip_addresses": [
              "10.6.0.10"
            ],
            "resource_group_name": "simuland-rg"
          },
          "dependencies": [
            "azurerm_subnet.DC001_vnet_default",
            "azurerm_virtual_network.DC001_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "guest001815_z1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/networkInterfaces/guest001815_z1",
            "internal_domain_name_suffix": "knjesjxv3t5urnpzv4kg145nxf.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.6.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/virtualNetworks/DC001-vnet/subnets/default"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus2",
            "mac_address": "00-22-48-7C-40-8E",
            "name": "guest001815_z1",
            "private_ip_address": "10.6.0.4",
            "private_ip_addresses": [
              "10.6.0.4"
            ],
            "resource_group_name": "simuland-rg",
            "virtual_machine_id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Compute/virtualMachines/GUEST001"
          },
          "dependencies": [
            "azurerm_subnet.DC001_vnet_default",
            "azurerm_virtual_network.DC001_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "guest002244_z1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/networkInterfaces/guest002244_z1",
            "internal_domain_name_suffix": "knjesjxv3t5urnpzv4kg145nxf.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.6.0.9",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/virtualNetworks/DC001-vnet/subnets/default"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus2",
            "mac_address": "00-0D-3A-6E-72-13",
            "name": "guest002244_z1",
            "private_ip_address": "10.6.0.9",
            "private_ip_addresses": [
              "10.6.0.9"
            ],
            "resource_group_name": "simuland-rg",
            "virtual_machine_id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Compute/virtualMachines/GUEST002"
          },
          "dependencies": [
            "azurerm_subnet.DC001_vnet_default",
            "azurerm_virtual_network.DC001_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "sec001195_z1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/networkInterfaces/sec001195_z1",
            "internal_domain_name_suffix": "knjesjxv3t5urnpzv4kg145nxf.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.6.0.7",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/virtualNetworks/DC001-vnet/subnets/default"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus2",
            "mac_address": "00-22-48-79-47-FD",
            "name": "sec001195_z1",
            "private_ip_address": "10.6.0.7",
            "private_ip_addresses": [
              "10.6.0.7"
            ],
            "resource_group_name": "simuland-rg",
            "virtual_machine_id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Compute/virtualMachines/SEC001"
          },
          "dependencies": [
            "azurerm_subnet.DC001_vnet_default",
            "azurerm_virtual_network.DC001_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "sec002314_z1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/networkInterfaces/sec002314_z1",
            "internal_domain_name_suffix": "knjesjxv3t5urnpzv4kg145nxf.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.6.0.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/virtualNetworks/DC001-vnet/subnets/default"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus2",
            "mac_address": "00-0D-3A-F9-FB-10",
            "name": "sec002314_z1",
            "private_ip_address": "10.6.0.6",
            "private_ip_addresses": [
              "10.6.0.6"
            ],
            "resource_group_name": "simuland-rg",
            "virtual_machine_id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Compute/virtualMachines/SEC002"
          },
          "dependencies": [
            "azurerm_subnet.DC001_vnet_default",
            "azurerm_virtual_network.DC001_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "srv001927_z1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/networkInterfaces/srv001927_z1",
            "internal_domain_name_suffix": "knjesjxv3t5urnpzv4kg145nxf.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.6.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/virtualNetworks/DC001-vnet/subnets/default"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus2",
            "mac_address": "00-0D-3A-C6-8B-FD",
            "name": "srv001927_z1",
            "private_ip_address": "10.6.0.5",
            "private_ip_addresses": [
              "10.6.0.5"
            ],
            "resource_group_name": "simuland-rg",
            "virtual_machine_id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Compute/virtualMachines/SRV001"
          },
          "dependencies": [
            "azurerm_subnet.DC001_vnet_default",
            "azurerm_virtual_network.DC001_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "user001120_z1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/networkInterfaces/user001120_z1",
            "internal_domain_name_suffix": "knjesjxv3t5urnpzv4kg145nxf.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.6.0.11",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/virtualNetworks/DC001-vnet/subnets/default"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus2",
            "mac_address": "00-0D-3A-FE-76-C2",
            "name": "user001120_z1",
            "private_ip_address": "10.6.0.11",
            "private_ip_addresses": [
              "10.6.0.11"
            ],
            "resource_group_name": "simuland-rg",
            "virtual_machine_id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Compute/virtualMachines/USER001"
          },
          "dependencies": [
            "azurerm_subnet.DC001_vnet_default",
            "azurerm_virtual_network.DC001_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "user002535_z1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/networkInterfaces/user002535_z1",
            "internal_domain_name_suffix": "knjesjxv3t5urnpzv4kg145nxf.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.6.0.13",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/virtualNetworks/DC001-vnet/subnets/default"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus2",
            "mac_address": "00-0D-3A-FC-4F-FF",
            "name": "user002535_z1",
            "private_ip_address": "10.6.0.13",
            "private_ip_addresses": [
              "10.6.0.13"
            ],
            "resource_group_name": "simuland-rg",
            "virtual_machine_id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Compute/virtualMachines/USER002"
          },
          "dependencies": [
            "azurerm_subnet.DC001_vnet_default",
            "azurerm_virtual_network.DC001_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web001520_z1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/networkInterfaces/web001520_z1",
            "internal_domain_name_suffix": "knjesjxv3t5urnpzv4kg145nxf.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.6.0.14",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/virtualNetworks/DC001-vnet/subnets/default"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus2",
            "name": "web001520_z1",
            "private_ip_address": "10.6.0.14",
            "private_ip_addresses": [
              "10.6.0.14"
            ],
            "resource_group_name": "simuland-rg"
          },
          "dependencies": [
            "azurerm_subnet.DC001_vnet_default",
            "azurerm_virtual_network.DC001_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "DB001_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/networkSecurityGroups/DB001-nsg",
            "location": "westus2",
            "name": "DB001-nsg",
            "resource_group_name": "simuland-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "DB001nsg109",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/networkSecurityGroups/DB001nsg109",
            "location": "westus2",
            "name": "DB001nsg109",
            "resource_group_name": "simuland-rg",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "DC001_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/networkSecurityGroups/DC001-nsg",
            "location": "westus2",
            "name": "DC001-nsg",
            "resource_group_name": "simuland-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "GUEST001_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/networkSecurityGroups/GUEST001-nsg",
            "location": "westus2",
            "name": "GUEST001-nsg",
            "resource_group_name": "simuland-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "GUEST002_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/networkSecurityGroups/GUEST002-nsg",
            "location": "westus2",
            "name": "GUEST002-nsg",
            "resource_group_name": "simuland-rg",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "SEC001_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/networkSecurityGroups/SEC001-nsg",
            "location": "westus2",
            "name": "SEC001-nsg",
            "resource_group_name": "simuland-rg",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "SEC002_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/networkSecurityGroups/SEC002-nsg",
            "location": "westus2",
            "name": "SEC002-nsg",
            "resource_group_name": "simuland-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "USER001_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/networkSecurityGroups/USER001-nsg",
            "location": "westus2",
            "name": "USER001-nsg",
            "resource_group_name": "simuland-rg",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "USER002_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/networkSecurityGroups/USER002-nsg",
            "location": "westus2",
            "name": "USER002-nsg",
            "resource_group_name": "simuland-rg",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "WEB001_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/networkSecurityGroups/WEB001-nsg",
            "location": "westus2",
            "name": "WEB001-nsg",
            "resource_group_name": "simuland-rg",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "DC001_vnet_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/publicIPAddresses/DC001-vnet-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.155.5.12",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "DC001-vnet-ip",
            "resource_group_name": "simuland-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "DC001_vnet_AzureBastionSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.6.1.0/26"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/virtualNetworks/DC001-vnet/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "simuland-rg",
            "virtual_network_name": "DC001-vnet"
          },
          "dependencies": [
            "azurerm_virtual_network.DC001_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "DC001_vnet_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.6.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/virtualNetworks/DC001-vnet/subnets/default",
            "name": "default",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "simuland-rg",
            "virtual_network_name": "DC001-vnet"
          },
          "dependencies": [
            "azurerm_virtual_network.DC001_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "DC001_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.6.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "26495253-ecf5-48ff-b5f9-af946dfbedbd",
            "id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/virtualNetworks/DC001-vnet",
            "location": "westus2",
            "name": "DC001-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "simuland-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.6.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/virtualNetworks/DC001-vnet/subnets/default",
                "name": "default",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.6.1.0/26"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/c190c55a-9ab2-4b1e-92c4-cc8b1a032285/resourceGroups/simuland-rg/providers/Microsoft.Network/virtualNetworks/DC001-vnet/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          }
        }
      ]
    }
  ]
}